[gd_scene load_steps=16 format=3 uid="uid://cm7uxw0cq0ymo"]

[ext_resource type="Script" path="res://Scripts/Cards/CardController.gd" id="1_5rub8"]
[ext_resource type="Script" path="res://Scripts/Cards/Card.gd" id="2_etir8"]
[ext_resource type="Texture2D" uid="uid://dlmet04b4ilft" path="res://Assets/Cards/cardLabel.png" id="3_srvut"]
[ext_resource type="Texture2D" uid="uid://cwq2iv3rf0cu" path="res://Assets/Cards/CardFront.png" id="3_xpgng"]
[ext_resource type="FontFile" uid="uid://dmj5d176hngh2" path="res://Assets/Fonts/Connection-II.ttf" id="4_i5lyf"]
[ext_resource type="Texture2D" uid="uid://2g32erb0i5i7" path="res://Assets/Cards/CardFrame.png" id="4_xse4l"]
[ext_resource type="Texture2D" uid="uid://jyk8aahbldnn" path="res://Assets/Cards/ElementSymbols/Fire.png" id="5_aghio"]
[ext_resource type="Texture2D" uid="uid://4rd7tn4yi1a5" path="res://Assets/Cards/CardBack.png" id="5_ogprk"]
[ext_resource type="Texture2D" uid="uid://bqfersks6xtk8" path="res://Assets/Cards/ChanceLabel.png" id="6_v3ke2"]
[ext_resource type="Texture2D" uid="uid://clmhjp3p1xylg" path="res://Assets/Cards/AccuracyLabel2.png" id="7_gtv3g"]
[ext_resource type="Texture2D" uid="uid://cimuldtckak4e" path="res://Assets/Cards/CardImages/Fire/Ignite.png" id="10_726vb"]

[sub_resource type="Animation" id="Animation_ucyjo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card/Card/Backside:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o7app"]
resource_name = "cover"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.01, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card/Card/Backside:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ef8ym"]
resource_name = "flip"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.01, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card/Card/Backside:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btvl0"]
_data = {
"RESET": SubResource("Animation_ucyjo"),
"cover": SubResource("Animation_o7app"),
"flip": SubResource("Animation_ef8ym")
}

[node name="Card" type="Control"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 3
anchor_left = -0.046
anchor_top = -0.117
anchor_right = 1.0
anchor_bottom = 1.014
offset_left = 52.992
offset_top = 75.816
offset_right = -1072.0
offset_bottom = -524.072
mouse_filter = 1
script = ExtResource("1_5rub8")

[node name="Card" type="Node2D" parent="."]
position = Vector2(-45, -11)

[node name="Card" type="Button" parent="Card"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = -1
anchor_left = -0.047
anchor_top = -0.116
anchor_right = 0.043
anchor_bottom = 0.117
offset_left = -6.0
offset_top = -13.0
offset_right = 100.0
offset_bottom = 124.0
script = ExtResource("2_etir8")

[node name="CostLabel" type="Sprite2D" parent="Card/Card"]
position = Vector2(46, 10)
texture = ExtResource("3_srvut")

[node name="APCost" type="RichTextLabel" parent="Card/Card/CostLabel"]
offset_left = -46.0
offset_top = -8.0
offset_right = 52.0
offset_bottom = 13.0
scale = Vector2(0.9, 0.9)
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_i5lyf")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "5"
text_direction = 2

[node name="ElementLabel" type="Sprite2D" parent="Card/Card"]
position = Vector2(46, 40)
texture = ExtResource("3_srvut")

[node name="Element" type="Sprite2D" parent="Card/Card/ElementLabel"]
position = Vector2(49, -10)
texture = ExtResource("5_aghio")
offset = Vector2(-15.7714, 9.90476)

[node name="ChanceLabel" type="Sprite2D" parent="Card/Card"]
position = Vector2(46, 70)
texture = ExtResource("3_srvut")

[node name="CastChance" type="RichTextLabel" parent="Card/Card/ChanceLabel"]
offset_left = -44.0
offset_top = -8.0
offset_right = 37.0
offset_bottom = 12.0
scale = Vector2(0.9, 0.9)
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_i5lyf")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "100"
scroll_active = false
text_direction = 2

[node name="Sprite2D" type="Sprite2D" parent="Card/Card/ChanceLabel"]
position = Vector2(36, 1)
scale = Vector2(1.4, 1.4)
texture = ExtResource("6_v3ke2")

[node name="RangeLabel" type="Sprite2D" parent="Card/Card"]
position = Vector2(46, 100)
texture = ExtResource("3_srvut")

[node name="Range" type="RichTextLabel" parent="Card/Card/RangeLabel"]
offset_left = -44.0
offset_top = -8.0
offset_right = 37.0
offset_bottom = 12.0
scale = Vector2(0.9, 0.9)
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_i5lyf")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "5
"
scroll_active = false
text_direction = 2

[node name="Sprite2D" type="Sprite2D" parent="Card/Card/RangeLabel"]
position = Vector2(36, 1)
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_gtv3g")

[node name="CardSprite" type="Sprite2D" parent="Card/Card"]
self_modulate = Color(0.658824, 0.0509804, 0.0627451, 1)
position = Vector2(53, 69)
scale = Vector2(1.14583, 1.01429)
texture = ExtResource("3_xpgng")

[node name="CardFrame" type="Sprite2D" parent="Card/Card"]
position = Vector2(52.9998, 69.0003)
scale = Vector2(1.14583, 1.01429)
texture = ExtResource("4_xse4l")

[node name="Name" type="RichTextLabel" parent="Card/Card"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 130.0
offset_bottom = 27.0
scale = Vector2(0.8, 0.8)
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_i5lyf")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Ignite[/center]"
scroll_active = false

[node name="Description" type="RichTextLabel" parent="Card/Card"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 95.0
offset_right = 111.0
offset_bottom = 135.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_i5lyf")
theme_override_font_sizes/normal_font_size = 20

[node name="Picture" type="Sprite2D" parent="Card/Card"]
position = Vector2(52.9998, 59.0003)
scale = Vector2(1.125, 1.07813)
texture = ExtResource("10_726vb")

[node name="Timer" type="Timer" parent="Card/Card"]

[node name="Backside" type="Sprite2D" parent="Card/Card"]
position = Vector2(53, 69)
scale = Vector2(1.146, 1.014)
texture = ExtResource("5_ogprk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_btvl0")
}

[connection signal="mouse_entered" from="Card/Card" to="Card/Card" method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="Card/Card" to="Card/Card" method="_on_Card_mouse_exited"]
[connection signal="pressed" from="Card/Card" to="Card/Card" method="_on_pressed"]
